# Navier_Stokes_FEM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
assets/: mesh_small.json  scene.json
cpp/: assembly.cpp  cmd_line_parser.cpp  error_code.cpp  expression.cpp  gpu_context.cpp  gpu_host_common.cpp  gpu_simulation_device.cpp  gpu_sparse_matrix.cpp  grid.cpp  kd_tree.cpp  kd_tree_builder.cpp  main.cpp  parse_scene.cpp
gpu/: advection.cu  matrix_math.cu
gpu_cpu_shared/: defines_common.cuh  gpu_grid.cuh  kd_tree.cuh  kd_tree_common.cuh  matrix_math_common.cuh  misc_common.cuh  small_vector.cuh
include/: assembly.h  cmd_line_parser.h  error_code.h  expression.h  gpu_context.h  gpu_host_common.h  gpu_simulation_device.h  gpu_sparse_matrix.h  grid.h  kd_tree.h  kd_tree_builder.h  small_vector.h  static_matrix.h  timer.h
tex/: main.bib  main.tex  resume.tex
tex/Chapters/: 00_chapter_introduction.tex  01_chapter_FEM.tex  04_implementation_details.tex  05_appendix_statistical_data.tex  06_appendix_grid_sync.tex  08_appendix_sparse_mat.tex  09_numerical_experiments.tex  paper_review.tex
tex/Figures/: semi-lagrangian.eps  semi-lagrangian.tex
tex/presentation/: main.tex
tex/presentation/Семинар/: main.tex
tools/: perf_test.py
